--- a/index.html
+++ b/index.html
@@ -221,15 +221,15 @@
             { title: "Newborn", desc: "Day 1: A star was born! You were so tiny and perfect.", img: "0.jpg" },
             { title: "1 Month", desc: "First smiles! Seeing your eyes light up changed our world.", img: "1.jpg" },
             { title: "2 Months", desc: "Discovering your hands and giggling at everything!", img: "2.jpg" },
-            { title: "3 Months", desc: "Tummy time champion. You're getting so strong.", img: "3.jpg" },
+            { title: "3 Months", desc: "Strong, brave, and already winning hearts like a little soldier in training.", img: "3.jpg" },
             { title: "4 Months", desc: "Grabbing toys and finding your voice. Such a loud baby!", img: "4.jpg" },
             { title: "5 Months", desc: "Almost sitting up! You love watching the birds outside.", img: "5.jpg" },
-            { title: "6 Months", desc: "Half a year! Your first taste of solid food was a hit.", img: "6.jpg" },
+            { title: "6 Months", desc: "Small hands, big dreams, and a future full of winning shots.", img: "6.jpg" },
             { title: "7 Months", desc: "Sitting up tall and playing with your favorite Nathan toys.", img: "7.jpg" },
-            { title: "8 Months", desc: "Crawling fast! No corner of the house is safe now.", img: "8.jpg" },
-            { title: "9 Months", desc: "Pulling yourself up on the sofa. Standing tall!", img: "9.jpg" },
-            { title: "10 Months", desc: "Waving 'Hi' and 'Bye'. You're such a social butterfly.", img: "10.jpg" },
-            { title: "11 Months", desc: "Brave first steps. You are so determined and fearless.", img: "11.jpg" },
+            { title: "8 Months", desc: "Bringing more sweetness than scares this spooky season.", img: "8.jpg" },
+            { title: "9 Months", desc: "Clearly unimpressed, but still impossibly cute in every way.", img: "9.jpg" },
+            { title: "10 Months", desc: "Smiling through the ride and enjoying every little adventure along the way.", img: "10.jpg" },
+            { title: "11 Months", desc: "A happy smile that makes every meal and moment feel extra special.", img: "11.jpg" },
             { title: "ONE YEAR!", desc: "Happy 1st Birthday! Our first year together was magic.", img: "12.jpg" }
         ];
 
