--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
             box-shadow: 0 4px 10px rgba(0,0,0,0.2); transition: all 0.3s ease;
         }
 
+        /* Added Volume Warning Style */
+        #volWarning {
+            position: fixed; bottom: 28px; left: 80px; background: rgba(0,0,0,0.7);
+            color: white; padding: 5px 12px; border-radius: 10px; font-size: 0.7rem;
+            z-index: 10000; pointer-events: none; opacity: 0; transition: opacity 0.5s;
+            font-family: 'Fredoka'; display: flex; align-items: center; gap: 5px;
+        }
+
         nav {
             position: sticky; top: 0; background: rgba(255, 255, 255, 0.7); backdrop-filter: blur(15px);
             padding: 12px 20px; display: flex; align-items: center; justify-content: center; z-index: 1000; 
@@ -136,6 +144,8 @@
     <div id="musicToggle" onclick="toggleMusic(event)">
         <i id="musicIcon" class="fas fa-music" style="color: #2ecc71;"></i>
     </div>
+    
+    <div id="volWarning"><i class="fas fa-volume-down"></i> Low volume music active</div>
 
     <div id="scrollNote" onclick="document.getElementById('guestbook').scrollIntoView({behavior:'smooth'})">
         <i class="fas fa-comment"></i> Write a Wish!
@@ -261,13 +271,24 @@
         const wheelsOnBus = "WOTB.mp3";
         const happyBirthday = "HBD.mp3"; 
         const audioEl = document.getElementById('bgMusic');
-        audioEl.volume = 0.3;
+        
+        // Lowered default volume to prevent startling (10%)
+        audioEl.volume = 0.1;
+
+        // Show volume warning on load
+        window.addEventListener('load', () => {
+            const warn = document.getElementById('volWarning');
+            warn.style.opacity = "1";
+            setTimeout(() => { warn.style.opacity = "0"; }, 5000);
+        });
 
         function startMusic() {
             if(!musicStarted) {
                 audioEl.src = isBirthday ? happyBirthday : wheelsOnBus;
                 audioEl.play().catch(() => {});
                 musicStarted = true;
+                // Hide warning once music actually starts
+                document.getElementById('volWarning').style.opacity = "0";
             }
         }
 
